2007-01-29  Ilya Kharmatsky <ilyak -at- mainsoft.com>

	* ToolboxItemAttributeTests.cs: excluded DefaultType test,
        under TARGET_JVM

2007-01-25  Ilya Kharmatsky <ilyak -at- mainsoft.com>

	* ArrayConverterTests.cs: workaround not supported under TARGET_JVM
	property 'ParamName' of System.ArgumentNullException

2007-01-20  Chris Toshok  <toshok@ximian.com>

	* BindingListTest.cs: new tests for BindingList<T>

2007-01-05  Sebastien Pouliot  <sebastien@ximian.com>

	* TypeDescriptorTests.cs: Fix TestGetAttributes t16 as there can be
	many [Designer] attributes and their order isn't deterministic (like
	the test required).

2006-12-28  Gert Driesen  <drieseng@users.sourceforge.net>

	* ContainerTest.cs: Fixed compiler warning.

2006-12-22  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DefaultBindingPropertyAttributeTest.cs: new tests.

2006-12-21  Gert Driesen  <drieseng@users.sourceforge.net>

	* PropertyDescriptorTests.cs: Added test for bug #80292. Fixed
	accessibility of NestedClass, not caugh due to bug #80338.

2006-12-20  Chris Toshok  <toshok@ximian.com>

	* AttributeProviderAttributeTest.cs: new tests.

2006-12-20  Chris Toshok  <toshok@ximian.com>

	* ComplexBindingPropertiesAttributeTest.cs: add test for Default
	field.

2006-12-20  Chris Toshok  <toshok@ximian.com>

	* ComplexBindingPropertiesAttributeTest.cs: new tests.

2006-12-19  Chris Toshok  <toshok@ximian.com>

	* PropertyDescriptorTests.cs: add some tests here because we were
	generating an NRE for a missing type converter type.  MS doesn't -
	it instead falls back to the converter for the property type.

2006-12-06  Chris Toshok  <toshok@ximian.com>

	* PropertyDescriptorTests.cs: add a test to see if
	ShouldSerializeValue's return value affects CanResetValue.

2006-12-06  Chris Toshok  <toshok@ximian.com>

	* PropertyDescriptorTests.cs: add a test for ShouldSerializeValue
	and CanResetValue on a class without ShouldSerialize/Reset
	methods.

2006-12-06  Chris Toshok  <toshok@ximian.com>
