@@ -43,6 +43,9 @@ namespace MonoTests.System.ComponentModel
 		}
 
 		[Test]
+#if TARGET_JVM
+		[Ignore ("TD BUG ID: 7229")]
+#endif
 		public void GetProperties ()
 		{
 			PropertyDescriptorCollection properties = null;
